Updated jdk, index.html, pom.xml for a runtime image. Leaflet.js is still buggy in WebView